--- a/bootstrap.css
+++ b/bootstrap.css
@@ -10,7 +10,6 @@
 	background-color:rgb(35,38,57);
 padding:20px;
 margin-bottom:35px;
-box-shadow: 2px 2px 4px 4px rgba(25,38,57,0.5);
 }
 
 span {color:rgb(240, 161, 43);
@@ -21,7 +20,7 @@ span {color:rgb(240, 161, 43);
   #profilePhoto{border-radius:50%;
     margin: auto;
     display: block;
-    box-shadow: 1px 1px 3px 3px #f6f7fcbb;
+    filter: contrast(1.16);
     }
 
 :root {
@@ -613,10 +612,10 @@ progress {
 .container-lg,
 .container-md,
 .container-sm {
-  width: 90%;
+  width: 100%;
   padding-right: var(--bs-gutter-x, 0.75rem);
   padding-left: var(--bs-gutter-x, 0.75rem);
-  width:90%;
+  width:100%;
   margin:auto;
 }
 
@@ -10863,6 +10862,12 @@ textarea.form-control-lg {
   }
 }
 
+
+.backend,.frontend,.projects{
+  box-shadow: 1px 1px 3px 3px rgba(10,10,10,0.2);
+  padding: 10px;
+}
+
 .backend h4, .frontend h4,#skills{
 color: rgba(0,0,0,0.7);
 text-align: center;
@@ -10877,11 +10882,12 @@ text-align: center;
 
 
 .projects{
-  background-color:rgb(115,133,252);
+
   padding: 20px;
 }
 
 .projects h2{
+  color:
 padding-bottom: 20px;
 }
 
@@ -10910,9 +10916,18 @@ ul{list-style-type:none;
 
 
   .projects h2{
- padding-bottom: 35px;
+ padding-bottom: 25px;
+ color: rgba(0,0,0,0.7);
+ font-size: 38px;
+ font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+ text-align: center;
   }
 
+  #skills{
+    font-size: 36px;
+ font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; 
+ margin-top:40px;
+  }
   .backend,.frontend{
     margin-bottom: 15px;
   }
@@ -10931,8 +10946,9 @@ ul{list-style-type:none;
 
  
     
-    .projects a{padding-bottom:10px;
+    .projects a{margin:10px;
     font-style:italic;
+padding: 15px;
     color:white;
     }
     
@@ -10969,8 +10985,27 @@ footer p{
   padding-top: 30px;
   font-family:serif;
   font-size:15px;
+  margin-bottom: 5px;
 }
 
+footer a{
+color: white;
+}
 
+.checked{
+  color: green;
+}
+
+.checked3{
+  color:yellow ;
+}
+
+.checked2{
+  color: orange;
+}
+
+i{
+  padding: 5px;
+}
 
 /*# sourceMappingURL=bootstrap.css.map */
